# AdventOfCode

./: LICENSE  README.md
2023/: .gitignore  1.awk  10.rb  11.f90  12.kts  13.lua  14.tcl  15.cob  16.jl  17.javajava  18  18.ps  19.csh  2.py  20.d  21.pl  3.cpp  4.rs  5.exs  6.ml  7.php  8.bash  9.hs  Makefile
2024/: Cargo.toml
2024/src/: 1.rs  10.rs  11.rs  12.rs  13.rs  14.rs  15.rs  16.rs  17.rs  18.rs  19.rs  2.rs  20.rs  22.rs  23.rs  3.rs  4.rs  5.rs  6.rs  7.rs  8.rs  9.rs
2025/: .gitignore  1.cpp  10.cpp  10.py  11.cpp  12.py  2.cpp  2.py  3.cpp  4.cpp  5.cpp  6.py  7.cpp  8.cpp  9.cpp  Makefile
