[package]
name = "adventofcode-2024"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.11.1"

[[bin]]
name = "1"
path = "src/1.rs"

[[bin]]
name = "2"
path = "src/2.rs"

[[bin]]
name = "3"
path = "src/3.rs"

[[bin]]
name = "4"
path = "src/4.rs"

[[bin]]
name = "5"
path = "src/5.rs"

[[bin]]
name = "6"
path = "src/6.rs"

[[bin]]
name = "7"
path = "src/7.rs"

[[bin]]
name = "8"
path = "src/8.rs"

[[bin]]
name = "9"
path = "src/9.rs"

[[bin]]
name = "10"
path = "src/10.rs"
